err/notebooktools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/biomodeltoolbox'...
Compiling './lib/python3.5/site-packages/biomodeltoolbox/_annotations.py'...
***   File "./lib/python3.5/site-packages/biomodeltoolbox/_annotations.py", line 43
    print 'Comparing %s (%s) with %s (%s)' % (s1.getId(), ch1, s2.getId(), ch2)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/biomodeltoolbox/_widget_slider.py'...
***   File "./lib/python3.5/site-packages/biomodeltoolbox/_widget_slider.py", line 69
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomodeltoolbox/biomodeltoolbox.py'...
***   File "./lib/python3.5/site-packages/biomodeltoolbox/biomodeltoolbox.py", line 26
    print '%s exactly matches %s' % (match['exact'][0]['id'], match['id'])
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diffevolution'...
Compiling './lib/python3.5/site-packages/diffevolution/differentialEvolution.py'...
***   File "./lib/python3.5/site-packages/diffevolution/differentialEvolution.py", line 104
    print 'Finished after %s seconds' % str(time.time()-start)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notebooktools'...
Compiling './lib/python3.5/site-packages/notebooktools/notebooktools.py'...
***   File "./lib/python3.5/site-packages/notebooktools/notebooktools.py", line 110
    print '''
For side-by-side output, add this to a new cell:

%%html
<style>
div.cell {box-orient:horizontal;flex-direction:row;}
div.cell *{width:100%;}div.prompt{width:80px;}</style>
'''
             
                                                

      
       
                                                    
                                                      
  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/notebooktools-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
